objects/Model_Group__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Image__c</fullName>
        <label>Default Group Model Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Model_Material_Classification__c</fullName>
        <formula>Equipment__r.Material_Classification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Model Material Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Model</label>
        <referenceTo>Equipment_Image__c</referenceTo>
        <relationshipLabel>Model Groups</relationshipLabel>
        <relationshipName>Model_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Category_Code__c</fullName>
        <formula>Equipment_Category__r.Category_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Category_Name__c</fullName>
        <formula>Equipment_Category__r.Category_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Category</label>
        <referenceTo>Equipment_Category__c</referenceTo>
        <relationshipLabel>Model Groups</relationshipLabel>
        <relationshipName>Model_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Model Name</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Model Groups</relationshipLabel>
        <relationshipName>Model_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <externalId>true</externalId>
        <label>Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Model Group</label>
    <listViews>
        <fullName>ALL_Model_Groups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Description__c</field>
            <operation>equals</operation>
            <value>coffee</value>
        </filters>
        <label>coffee</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>CO</value>
        </filters>
        <label>DEV - COOLER Model Groups</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Code__c</columns>
        <columns>Default_Model_Material_Classification__c</columns>
        <columns>Group_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All_Models</label>
    </listViews>
    <listViews>
        <fullName>All_Models</fullName>
        <columns>NAME</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Code__c</columns>
        <columns>Default_Model_Material_Classification__c</columns>
        <columns>Group_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All_Models</label>
    </listViews>
    <listViews>
        <fullName>DEV_BREWED_Model_Groups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>BT</value>
        </filters>
        <label>DEV - BREWED Model Groups</label>
    </listViews>
    <listViews>
        <fullName>DEV_DISPENSED_Model_Groups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>FN</value>
        </filters>
        <label>DEV - DISPENSED Model Groups</label>
    </listViews>
    <listViews>
        <fullName>DEV_FOUNTAIN_Model_Groups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Default_Model_Material_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>FN</value>
        </filters>
        <label>DEV - FOUNTAIN Model Groups</label>
    </listViews>
    <listViews>
        <fullName>DEV_Juicer_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>OJ</value>
        </filters>
        <label>DEV - Juicer Model Groups</label>
    </listViews>
    <listViews>
        <fullName>DEV_VENDER_Model_Groups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Default_Model_Material_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>VM</value>
        </filters>
        <label>DEV - VENDER Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Brewed_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>BT</value>
        </filters>
        <label>INT - Brewed Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Cooler_Model_Groups</fullName>
        <columns>Default_Image__c</columns>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>CO</value>
        </filters>
        <label>INT - Cooler Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Dispensing_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Name__c</field>
            <operation>equals</operation>
            <value>Dispensing</value>
        </filters>
        <label>INT - Dispensing Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Fountain_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>FN</value>
        </filters>
        <label>INT - Fountain Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Juice_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>OJ</value>
        </filters>
        <label>INT - Juice Model Groups</label>
    </listViews>
    <listViews>
        <fullName>INT_Vending_Model_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Description__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Default_Model__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Code__c</field>
            <operation>equals</operation>
            <value>VM</value>
        </filters>
        <label>INT - Vending Model Groups</label>
    </listViews>
    <nameField>
        <displayFormat>EG-{00000}</displayFormat>
        <label>Equipment Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>